mongo/mongo-ingress.yaml


# Mongo Ingress manifest - Used by mongo application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
spec:
  rules:
  - host: express.development.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: mongo-express-service
            port:
              number: 8081
